Fixed the issue with small viewports on mobile not engaging media queries

--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,7 @@ footer {
     background-color: grey;
 
 }
-.carousel-item {
-  align-items: center;
-}
+
 
 /* Media Breakpoints */
 
